<resources>
    <string name="app_name">SuitMedia Test Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="check">Check</string>
    <string name="palindrome">Palindrome</string>
    <string name="name">Name</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="second_screen">Second Screen</string>
    <string name="back_button">back_button</string>
    <string name="welcome">Welcome</string>
    <string name="john_doe">John Doe</string>
    <string name="data_is_empty">Data is Empty :)</string>
</resources>