<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/img"
    android:paddingHorizontal="33dp"
    tools:context=".ui.navigation.FirstScreenFragment">


    <de.hdodenhof.circleimageview.CircleImageView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="100dp"
        android:id="@+id/profile_image"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:src="@drawable/baseline_account_circle_24"/>

    <com.bangkit.suitmediatestapplication.ui.customview.EditText
        android:hint="@string/name"
        android:id="@+id/et_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="66dp"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        android:background="@drawable/custom_form"
        android:paddingStart="20dp"
        android:layout_width="310dp"
        android:layout_height="47dp"/>

    <com.bangkit.suitmediatestapplication.ui.customview.EditText
        android:hint="@string/palindrome"
        android:id="@+id/et_palindrome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        android:background="@drawable/custom_form"
        android:layout_width="310dp"
        android:layout_height="47dp"
        android:paddingStart="20dp"/>


    <com.bangkit.suitmediatestapplication.ui.customview.CustomButton
        android:textColor="@color/white"
        android:text="@string/check"
        android:id="@+id/btn_check"
        app:layout_constraintTop_toBottomOf="@id/et_palindrome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:background="@drawable/custom_button"/>

    <com.bangkit.suitmediatestapplication.ui.customview.CustomButton
        android:id="@+id/btn_next"
        android:textColor="@color/white"
        android:text="@string/next"
        app:layout_constraintTop_toBottomOf="@id/btn_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_button"/>



</androidx.constraintlayout.widget.ConstraintLayout>